[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Interactive/Interactable.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[node name="Interactable" type="Spatial"]
script = ExtResource( 1 )
interactable_type = 7
interaction_mode = 1

[node name="ViewColliderArea" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="ViewColliderArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
